[project]
name = "diamond-dynamics"
version = "0.1.0"
description = "Diamond Dynamics: Price & Segment Predictor"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=2.2.1",
    "pandas>=2.2.3",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "streamlit>=1.41.1",
    "xgboost>=2.1.3",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "mypy>=1.14.1",
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "ruff>=0.8.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100

[tool.mypy]
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["src/"]
